tests/baselines/reference/parserAmbiguity3.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserAmbiguity3.ts(1,1): error TS2304: Cannot find name 'f'.
tests/cases/conformance/parser/ecmascript5/Generics/parserAmbiguity3.ts(1,3): error TS2304: Cannot find name 'g'.
tests/cases/conformance/parser/ecmascript5/Generics/parserAmbiguity3.ts(1,7): error TS2304: Cannot find name 'A'.
tests/cases/conformance/parser/ecmascript5/Generics/parserAmbiguity3.ts(1,10): error TS2304: Cannot find name 'B'.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserAmbiguity3.ts (4 errors) ====
    f(g < A, B > +(7));
    ~
!!! error TS2304: Cannot find name 'f'.
      ~
!!! error TS2304: Cannot find name 'g'.
          ~
!!! error TS2304: Cannot find name 'A'.
             ~
!!! error TS2304: Cannot find name 'B'.